# monmix

./: .gitattributes  .gitignore  INVESTIGATION.md
case/: back.stl  back_logo.3mf  back_logo.stl  back_plain.3mf  back_plain.stl  case.scad  debug.scad  front.stl  front_flush.3mf  front_flush.stl  front_snap.3mf  front_snap.stl  merge_3mf.py  preview_assembly.scad
docs/raw/bitfocus/: companion_HELP.md  package.json  src_actions.ts  src_feedbacks.ts  src_main.ts  src_utils.ts  src_variables.ts
esp_pp_display/: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
esp_pp_display/main/: CMakeLists.txt  app_config.c  app_config.h  app_console.c  app_console.h  app_coredump.c  app_coredump.h  app_display.h  app_logd.c  app_logd.h  app_pp_client.h  app_pp_client_tcp.c  app_pp_state.c  app_pp_state.h  app_prefs.c  app_prefs.h  app_storage.h  app_time.h  app_ui.c  app_ui.h  app_wifi.h  esp_pp_main.c  idf_component.yml  secrets.h.template
esp_pp_display/pc_sim/: CMakeLists.txt  build.ps1  lv_conf.h  pc_main.c  pp_client_real.c  pp_client_real.h  sim_compat.h
esp_pp_display/pc_sim/mocks/: mock_app_pp_client.c  mock_app_wifi.c  mock_esp_lvgl_port.c  mock_esp_timer.c  mock_freertos.c
esp_pp_display/pc_sim/stubs/: esp_netif_sntp.h  esp_sntp.h
esp_pp_display/pc_sim/stubs/freertos/: FreeRTOS.h  semphr.h
esp_pp_display/pc_sim/stubs/lwip/: netdb.h
esp_ui/: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  partitions.csv  pytest_esp_ui.py  sdkconfig.defaults
esp_ui/hardware/: .gitignore  back.3mf  back.stl  back_combined.3mf  back_plain.3mf  back_plain.stl  case.scad  front.3mf  front.stl  front_flush.3mf  preview_assembly.scad
esp_ui/main/: CMakeLists.txt  app_config.c  app_config.h  app_console.c  app_console.h  app_coredump.c  app_display.c  app_display.h  app_logd.c  app_logd.h  app_ms_client.h  app_ms_client_osc.c  app_ms_client_ws.c  app_ms_info.c  app_ms_info.h  app_ms_setup.h  app_netconsole.c  app_netconsole.h  app_ota.c  app_ota.h  app_power.c  app_power.h  app_prefs.c  app_prefs.h  app_state.c  app_state.h  app_storage.c  app_time.c  app_time.h  app_touch_inject.c  app_touch_inject.h  app_ui.c  app_ui.h  app_wifi.c  app_wifi.h  esp_ui_main.c  idf_component.yml  osc_expect.c  osc_expect.h  secrets.h.template
esp_ui/main/fonts/: font_monmix_level.c
esp_ui/main/images/: splash_logo.c
esp_ui/pc_sim/: .gitignore  CMakeLists.txt  build.ps1  build.sh  lv_conf.h  ms_client_real.c  ms_client_real.h  ms_client_real_osc.c  pc_main.c  sim_compat.h  throttle.c  throttle.h
esp_ui/pc_sim/mocks/: mock_app_config.c  mock_app_display.c  mock_app_logd.c  mock_app_ms_client.c  mock_app_ota.c  mock_app_prefs.c  mock_app_storage.c  mock_app_time.c  mock_app_wifi.c  mock_esp_netif_sntp.c  mock_esp_system.c  mock_nvs.c
esp_ui/pc_sim/scripts/: level_format_repro.txt  mute_panic_repro.txt  polish_check.txt  probe_layout.txt  real_ms_smoke.txt  ws_idle_soak.txt
esp_ui/pc_sim/stubs/: esp_attr.h  esp_err.h  esp_log.h  esp_lvgl_port.h  esp_system.h  esp_timer.h  nvs.h
esp_ui/pc_sim/stubs/lwip/: sockets.h
esp_ui/tests/: .gitignore  README.md
esp_ui/tests/hw/: run.py
esp_ui/tests/sim/: run.py  test_boot_smoke.py  test_chpick_live_apply.py  test_chpick_settings_refresh.py  test_config_drag_no_rename.py  test_config_drag_reorder.py  test_config_drag_reorder_insert.py  test_config_master_tile_color.py  test_config_master_tile_rename.py  test_console_diag.py  test_db_pref_boot.py  test_graceful_shutdown.py  test_level_format_switch.py  test_mix_change_no_ws_bounce.py  test_mix_routed_filter.py  test_ms_host_change_names.py  test_mute_toast.py  test_osc_live_smoke.py  test_power_healthy_never_sleeps.py  test_power_manual_sleep_healthy_stays_asleep.py  test_power_mid_sleep_wifi_arm_wakes.py  test_power_save_basic.py  test_power_save_boot_wake_menu.py  test_power_save_degraded.py  test_power_save_degraded_active.py  test_power_save_no_idle_reset.py  test_power_save_wake_menu_cancel.py  test_power_save_wake_menu_modal.py  test_power_save_warn_cancel.py  test_power_wake_on_console_attach.py  test_power_wake_on_ms_reconnect.py  test_setmix_persists.py  test_settings_grid.py  test_topbar_sleep_button.py  test_ws_idle_keepalive.py
esp_ui/tests/unit/: .gitignore  CMakeLists.txt  run.ps1  run.sh  test_db_taper.c  test_osc_expect.c
esp_ui/tools/: apply_managed_patches.py  build_monmix.ps1  build_splash_logo.py  fetch_b64.py  fetch_screenshot.py  flash_monmix.ps1  flash_ota.py  hammer_ms_rest.py  inspect_har.py  ms_openapi.json  probe_metering.py  probe_metering_types.py  repl_send.py  run_steps.py  serial_tail.ps1  serial_tail.py  soak.py  soak_report.py  test_partial_screenshot_decode.py  test_unsubscribe_envelope.py  update_slave_fw.ps1
esp_ui/tools/git-hooks/: pre-commit
stage_ui/: .gitignore  README.md
stage_ui/main/: app_display.h  app_power.c  app_power.h  app_pp_client.h  app_pp_state.c  app_pp_state.h  app_pp_ui.c  app_pp_ui.h  app_pp_ui_overlay.c  app_pp_ui_overlay.h  app_pp_ui_settings.c  app_pp_ui_settings.h  app_prefs.c  app_prefs.h  app_wifi.h
stage_ui/pc_sim/: .gitignore  CMakeLists.txt  build.ps1  build.sh  lv_conf.h  pc_main.c  sim_compat.h
stage_ui/pc_sim/mocks/: mock_app_display.c  mock_app_pp_client.c  mock_app_wifi.c
tools/: probe_pp.py
