idf_component_register(
    SRCS
        "esp_ui_main.c"
        "app_config.c"
        "app_state.c"
        "app_wifi.c"
        "app_ms_client_ws.c"
        "app_ms_info.c"
        "app_display.c"
        "app_ui.c"
        "app_storage.c"
        "app_coredump.c"
        "app_console.c"
        "app_logd.c"
        "app_touch_inject.c"
        "app_prefs.c"
        "images/splash_logo.c"
    INCLUDE_DIRS
        "."
    PRIV_REQUIRES
        nvs_flash
        esp_event
        esp_netif
        esp_wifi
        esp_lcd
        esp_driver_i2c
        esp_driver_ledc
        esp_driver_sdmmc
        sdmmc
        fatfs
        esp_partition
        espcoredump
        console
        mbedtls
        esp_http_client
        esp_rom
)
